# hrefy

./: .gitignore  README.md  docker-compose.yaml
client/: .dockerignore  client.dockerfile  package.json  vite.config.js
client/src/: App.vue  main.js
client/src/components/Link/: LinkBaseForm.vue
client/src/plugins/: apiFetch.js
serve/: pyproject.toml  requirements.txt  serve.dockerfile
serve/alembic/: env.py
serve/alembic/versions/: 479a09df0a09_.py  58a52d534274_.py  df035a463929_.py
serve/app/: db.sqlite3  main.py  settings.py
serve/app/api/: deps.py
serve/app/api/v1/: api.py
serve/app/api/v1/endpoints/: link.py
serve/app/crud/: __init__.py  crud_base.py  crud_link.py
serve/app/db/: __init__.py  alembic_init.py  connection.py  meta.py
serve/app/helpers/: __init__.py  date.py  encode.py
serve/app/model/: link.py
serve/app/schema/: link.py
serve/app/tests/: conftest.py
serve/app/tests/api/v1/: test_link.py
serve/app/tests/utils/: gen_link_short.py
